Fix letter spacing

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -209,6 +209,7 @@
   margin-top: 3rem;
   margin-bottom: 7.2rem;
   text-align: center;
+  letter-spacing: 0.1px;
 
   @include media-query($on-mobile) {
     margin-top: 2rem;
@@ -333,6 +334,7 @@
     padding-right: 5px;
     font-size: 14px;
     opacity: 0.6;
+    letter-spacing: 0.1px;
 
     // @include media-query($on-mobile) {
     //   font-size: 16px;
@@ -365,7 +367,7 @@
 
 .post-description {
   // font-family: "Merriweather", serif;
-  // letter-spacing: 0.01rem;
+  letter-spacing: 0.1px;
   // font-size: 1em;
 }
 
@@ -505,6 +507,7 @@
   display: flex;
   // display: inline-block;
   justify-content: space-around;
+  letter-spacing: 0.1px;
 
   a {
     text-decoration: none;
